Bug 486844 - Left/Bottom padding of identity contextual dialog is a bit too wide; r=dao a1.9.1=beltzner

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1961,7 +1961,8 @@ toolbarbutton.bookmark-item[dragover="true"][open="true"] {
 
 #identity-popup-more-info-button {
   margin-top: 6px;
-  -moz-margin-end: 1px;
+  margin-bottom: 0;
+  -moz-margin-end: 0;
 }
 
 /* Popup Bounding Box */
@@ -1978,7 +1979,7 @@ toolbarbutton.bookmark-item[dragover="true"][open="true"] {
 #identity-popup-container {
   background-image: none;
   min-width: 280px;
-  padding: 10px;
+  padding: 9px;
 }
 
 #download-monitor {
